feat(dm): 기능 구현 완료 및 리팩토링