@@ -3,7 +3,6 @@ package org.codeit.sb06.team03.mopl.bff;
 import lombok.RequiredArgsConstructor;
 import org.codeit.sb06.team03.mopl.common.security.MoplUserDetails;
 import org.codeit.sb06.team03.mopl.dm.conversation.application.in.*;
-import org.codeit.sb06.team03.mopl.dm.conversation.application.out.LoadDMUserPort;
 import org.codeit.sb06.team03.mopl.dm.conversation.domain.Conversation;
 import org.codeit.sb06.team03.mopl.dm.conversation.domain.entity.LiveMessageStat;
 import org.codeit.sb06.team03.mopl.dm.conversation.domain.vo.DMUser;
@@ -12,14 +11,17 @@ import org.codeit.sb06.team03.mopl.dm.conversation.infra.in.request.Conversation
 import org.codeit.sb06.team03.mopl.dm.livemessage.application.in.GetDirectMessageUseCase;
 import org.codeit.sb06.team03.mopl.dm.livemessage.application.in.MessageSendCommand;
 import org.codeit.sb06.team03.mopl.dm.livemessage.application.in.MessageSendUseCase;
-import org.codeit.sb06.team03.mopl.dm.livemessage.application.out.LoadLiveMessagePort;
 import org.codeit.sb06.team03.mopl.dm.livemessage.domain.LiveMessage;
 import org.codeit.sb06.team03.mopl.dm.livemessage.infra.in.request.MessageSendRequest;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @RequiredArgsConstructor
 @Service
@@ -30,8 +32,7 @@ public class BasicBffDMService implements BffDMService {
     private final MessageReadUseCase messageReadUseCase;
     private final MessageSendUseCase messageSendUseCase;
     private final GetDirectMessageUseCase getDirectMessageUseCase;
-    private final LoadDMUserPort loadDMUserPort;
-    private final LoadLiveMessagePort loadLiveMessagePort;
+    private final GetDMUserUseCase getDMUserUseCase;
     private final DMMapper dmMapper;
 
     @Override
@@ -40,8 +41,13 @@ public class BasicBffDMService implements BffDMService {
         int limit = request.limit();
 
         List<Conversation> items = getConversationUseCase.findAll(
-                userId, request.cursor(), request.idAfter(), limit,
-                request.sortDirection(), request.sortBy());
+                userId,
+                request.cursor(),
+                request.idAfter(),
+                limit,
+                request.sortDirection(),
+                request.sortBy()
+        );
 
         boolean hasNext = items.size() > limit;
         List<Conversation> page = hasNext ? items.subList(0, limit) : items;
@@ -49,20 +55,43 @@ public class BasicBffDMService implements BffDMService {
         String nextCursor = null;
         String nextIdAfter = null;
         if (hasNext && !page.isEmpty()) {
-            Conversation last = page.get(page.size() - 1);
+            Conversation last = page.getLast();
             nextCursor = last.getCreatedAt().toString();
             nextIdAfter = last.getId().toString();
         }
 
         long totalCount = getConversationUseCase.countAll(userId);
 
+        Set<UUID> userIds = page.stream()
+                .map(conv -> conv.getOtherParticipant(userId))
+                .collect(Collectors.toSet());
+
+        Set<UUID> convIds = page.stream()
+                .map(Conversation::getId)
+                .collect(Collectors.toSet());
+        Map<UUID, LiveMessage> latestMessages = getDirectMessageUseCase
+                .findLatestByConversationIds(convIds);
+
+        latestMessages.values().forEach(msg -> {
+            userIds.add(msg.getSenderId());
+            userIds.add(msg.getReceiverId());
+        });
+
+        Map<UUID, DMUser> userMap = getDMUserUseCase.findByUserIds(userIds);
+
         List<ConversationDto> data = page.stream()
-                .map(conv -> toConversationDto(conv, userId))
+                .map(conv -> toCursorConversationDto(conv, userId, userMap, latestMessages))
                 .toList();
 
         return new CursorResponseConversationDto(
-                data, nextCursor, nextIdAfter, hasNext, totalCount,
-                request.sortBy(), SortOrder.parse(request.sortDirection()));
+                data,
+                nextCursor,
+                nextIdAfter,
+                hasNext,
+                totalCount,
+                request.sortBy(),
+                SortOrder.parse(request.sortDirection())
+        );
     }
 
     @Override
@@ -96,8 +125,13 @@ public class BasicBffDMService implements BffDMService {
         int limit = request.limit();
 
         List<LiveMessage> items = getDirectMessageUseCase.findAll(
-                convId, request.cursor(), request.idAfter(), limit,
-                request.sortDirection(), request.sortBy());
+                convId,
+                request.cursor(),
+                request.idAfter(),
+                limit,
+                request.sortDirection(),
+                request.sortBy()
+        );
 
         boolean hasNext = items.size() > limit;
         List<LiveMessage> page = hasNext ? items.subList(0, limit) : items;
@@ -105,20 +139,31 @@ public class BasicBffDMService implements BffDMService {
         String nextCursor = null;
         String nextIdAfter = null;
         if (hasNext && !page.isEmpty()) {
-            LiveMessage last = page.get(page.size() - 1);
+            LiveMessage last = page.getLast();
             nextCursor = last.getCreatedAt().toString();
             nextIdAfter = last.getId().toString();
         }
 
         long totalCount = getDirectMessageUseCase.countAll(convId);
 
+        Set<UUID> userIds = page.stream()
+                .flatMap(msg -> Stream.of(msg.getSenderId(), msg.getReceiverId()))
+                .collect(Collectors.toSet());
+        Map<UUID, DMUser> userMap = getDMUserUseCase.findByUserIds(userIds);
+
         List<DirectMessageDto> data = page.stream()
-                .map(this::toDirectMessageDto)
+                .map(msg -> toDirectMessageDto(msg, userMap))
                 .toList();
 
         return new CursorResponseDirectMessageDto(
-                data, nextCursor, nextIdAfter, hasNext, totalCount,
-                request.sortBy(), SortOrder.parse(request.sortDirection()));
+                data,
+                nextCursor,
+                nextIdAfter,
+                hasNext,
+                totalCount,
+                request.sortBy(),
+                SortOrder.parse(request.sortDirection())
+        );
     }
 
     @Override
@@ -139,30 +184,46 @@ public class BasicBffDMService implements BffDMService {
         messageSendUseCase.send(new MessageSendCommand(convId, senderUuid, receiverId, request.content()));
     }
 
-    private ConversationDto toConversationDto(Conversation conv, UUID userId) {
-        UUID withUserId = conv.getOtherParticipant(userId);
-        DMUser with = loadDMUserPort.findByUserId(withUserId);
-
-        LiveMessageStat stat = conv.getLiveMessageStats().get(userId);
-        boolean hasUnread = stat != null && stat.isHasUnread();
-
-        DirectMessageDto lastestMessage = loadLiveMessagePort
-                .findLatestByConversationId(conv.getId())
-                .map(this::toDirectMessageDto)
-                .orElse(null);
+    private ConversationDto toConversationDto(Conversation conversation, UUID userId) {
+        UUID withUserId = conversation.getOtherParticipant(userId);
+        DMUser with = getDMUserUseCase.findByUserId(withUserId);
 
         return new ConversationDto(
-                conv.getId().toString(),
+                conversation.getId().toString(),
                 DMUserDto.from(with),
-                lastestMessage,
+                null,
+                false
+        );
+    }
+
+    private ConversationDto toCursorConversationDto(
+            Conversation conversation,
+            UUID userId,
+            Map<UUID, DMUser> userMap,
+            Map<UUID, LiveMessage> latestMessages
+    ) {
+        UUID withUserId = conversation.getOtherParticipant(userId);
+        DMUser with = userMap.get(withUserId);
+
+        LiveMessageStat stat = conversation.getLiveMessageStats().get(userId);
+        boolean hasUnread = stat != null && stat.isHasUnread();
+
+        LiveMessage latestMsg = latestMessages.get(conversation.getId());
+        DirectMessageDto latestMessage = latestMsg != null
+                ? toDirectMessageDto(latestMsg, userMap)
+                : null;
+
+        return new ConversationDto(
+                conversation.getId().toString(),
+                DMUserDto.from(with),
+                latestMessage,
                 hasUnread
         );
     }
 
-    private DirectMessageDto toDirectMessageDto(LiveMessage msg) {
-        DMUser sender = loadDMUserPort.findByUserId(msg.getSenderId());
-        DMUser receiver = loadDMUserPort.findByUserId(msg.getReceiverId());
-
+    private DirectMessageDto toDirectMessageDto(LiveMessage msg, Map<UUID, DMUser> userMap) {
+        DMUser sender = userMap.get(msg.getSenderId());
+        DMUser receiver = userMap.get(msg.getReceiverId());
         return new DirectMessageDto(
                 msg.getId().toString(),
                 msg.getConversationId().toString(),
